# issue

./: CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md
.github/templates/: issue.rb
.github/workflows/: release.yml
bench/: README.md  bench.py  gen_issues.go
crates/cli/: Cargo.toml
crates/cli/src/: completions.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: core.rs  json.rs  lib.rs  ops.rs  storage.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  editor.rs  event.rs  form.rs  main.rs  ui.rs
docs/: comparison-git-bug.md  requirements.md
docs/adr/: 0001-issue-id-is-a-plain-integer.md  0002-implement-core-in-rust.md  0003-github-aligned-frontmatter-schema.md  0004-github-json-interchange-for-export-import.md  0005-tui-lazyissue-and-workspace-split.md  0006-prebuilt-binary-homebrew-distribution.md
issue/: 1-issue-cli-mvp.md  README.md
src/: core.rs  main.rs  storage.rs
