[package]
name = "issue"
version = "0.1.0"
edition = "2021"
description = "Local-first issue-management CLI (std-only, no external crates)"
license = "MIT"
repository = "https://github.com/mrsmsn/issue"

[[bin]]
name = "issue"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
