[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/tui"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/mrsmsn/issue"

# Dependencies for the TUI crate are pinned once here and referenced with
# `workspace = true`. issue-core and the issue CLI take none of these — they
# stay std-only (ADR 0002, scoped by ADR 0005).
[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.28"
notify = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
