[package]
name = "issue"
description = "Local-first issue-management CLI (std-only, no external crates)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "issue"
path = "src/main.rs"

[dependencies]
issue-core = { path = "../core" }
