[package]
name = "lazyissue"
description = "lazygit-style terminal UI for the issue tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "lazyissue"
path = "src/main.rs"

[dependencies]
issue-core = { path = "../core" }
ratatui.workspace = true
crossterm.workspace = true
notify.workspace = true
